--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,88 @@
 <!DOCTYPE html>
-<html lang="en" class="has-background-info">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta property="og:url" content="https://www.theurlist.com" />
     <meta property="og:title" content="The Urlist - Share the internet" />
-    <meta property="og:description" content="Group links together in a list and get a custom URL to share them. Edit your lists at any time." />
-    <meta property="og:image" content="https://www.theurlist.com/images/logo.png" />
+    <meta
+      property="og:description"
+      content="Group links together in a list and get a custom URL to share them. Edit your lists at any time."
+    />
+    <meta
+      property="og:image"
+      content="https://www.theurlist.com/images/logo.png"
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>The Urlist</title>
     <script>
-      var appInsights=window.appInsights||function(a){
-        function b(a){c[a]=function(){var b=arguments;c.queue.push(function(){c[a].apply(c,b)})}}var c={config:a},d=document,e=window;setTimeout(function(){var b=d.createElement("script");b.src=a.url||"https://az416426.vo.msecnd.net/scripts/a/ai.0.js",d.getElementsByTagName("script")[0].parentNode.appendChild(b)});try{c.cookie=d.cookie}catch(a){}c.queue=[];for(var f=["Event","Exception","Metric","PageView","Trace","Dependency"];f.length;)b("track"+f.pop());if(b("setAuthenticatedUserContext"),b("clearAuthenticatedUserContext"),b("startTrackEvent"),b("stopTrackEvent"),b("startTrackPage"),b("stopTrackPage"),b("flush"),!a.disableExceptionTracking){f="onerror",b("_"+f);var g=e[f];e[f]=function(a,b,d,e,h){var i=g&&g(a,b,d,e,h);return!0!==i&&c["_"+f](a,b,d,e,h),i}}return c
-    }({
-        instrumentationKey: "fd47fb91-1cf3-448f-9b50-5498a966d75d"
-    });
+      var appInsights =
+        window.appInsights ||
+        (function(a) {
+          function b(a) {
+            c[a] = function() {
+              var b = arguments;
+              c.queue.push(function() {
+                c[a].apply(c, b);
+              });
+            };
+          }
+          var c = { config: a },
+            d = document,
+            e = window;
+          setTimeout(function() {
+            var b = d.createElement("script");
+            (b.src =
+              a.url || "https://az416426.vo.msecnd.net/scripts/a/ai.0.js"),
+              d.getElementsByTagName("script")[0].parentNode.appendChild(b);
+          });
+          try {
+            c.cookie = d.cookie;
+          } catch (a) {}
+          c.queue = [];
+          for (
+            var f = [
+              "Event",
+              "Exception",
+              "Metric",
+              "PageView",
+              "Trace",
+              "Dependency"
+            ];
+            f.length;
 
-    window.appInsights=appInsights,appInsights.queue&&0===appInsights.queue.length&&appInsights.trackPageView();
-  </script>
+          )
+            b("track" + f.pop());
+          if (
+            (b("setAuthenticatedUserContext"),
+            b("clearAuthenticatedUserContext"),
+            b("startTrackEvent"),
+            b("stopTrackEvent"),
+            b("startTrackPage"),
+            b("stopTrackPage"),
+            b("flush"),
+            !a.disableExceptionTracking)
+          ) {
+            (f = "onerror"), b("_" + f);
+            var g = e[f];
+            e[f] = function(a, b, d, e, h) {
+              var i = g && g(a, b, d, e, h);
+              return !0 !== i && c["_" + f](a, b, d, e, h), i;
+            };
+          }
+          return c;
+        })({
+          instrumentationKey: "fd47fb91-1cf3-448f-9b50-5498a966d75d"
+        });
+
+      (window.appInsights = appInsights),
+        appInsights.queue &&
+          0 === appInsights.queue.length &&
+          appInsights.trackPageView();
+    </script>
   </head>
-  <body class="has-background-info">
+  <body>
     <noscript>
       <strong
         >We're sorry but frontend doesn't work properly without JavaScript
