Add a meta tag for description

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
       content="Group links together in a list and get a custom URL to share them. Edit your lists at any time."
     />
     <meta
+      property="description"
+      content="Group links together in a list and get a custom URL to share them. Edit your lists at any time."
+    />
+    <meta
       property="og:image"
       content="https://www.theurlist.com/images/logo.png"
     />
